start individual progress report

--- a/papers/final/paper.tex
+++ b/papers/final/paper.tex
@@ -37,7 +37,7 @@
 }
 
 \begin{abstract}
-  The abstract will go here
+  The abstract will go here.
 \end{abstract}
 
 \keywords{deep learning, neural networks, music}
