save progress report paper work

--- a/papers/progress/alex/progress-alex.bib
+++ b/papers/progress/alex/progress-alex.bib
@@ -22,6 +22,54 @@
   file         = {arXiv.org Snapshot:/home/alex/Zotero/storage/HWIEIEIN/1809.html:text/html;arXiv Fulltext PDF:/home/alex/Zotero/storage/BFAISKEM/Huang et al. - 2018 - Music Transformer.pdf:application/pdf}
 }
 
+@article{oord_wavenet_2016,
+	title = {{WaveNet}: A Generative Model for Raw Audio},
+	url = {http://arxiv.org/abs/1609.03499},
+	shorttitle = {{WaveNet}},
+	abstract = {This paper introduces {WaveNet}, a deep neural network for generating raw audio waveforms. The model is fully probabilistic and autoregressive, with the predictive distribution for each audio sample conditioned on all previous ones; nonetheless we show that it can be efficiently trained on data with tens of thousands of samples per second of audio. When applied to text-to-speech, it yields state-of-the-art performance, with human listeners rating it as significantly more natural sounding than the best parametric and concatenative systems for both English and Mandarin. A single {WaveNet} can capture the characteristics of many different speakers with equal fidelity, and can switch between them by conditioning on the speaker identity. When trained to model music, we find that it generates novel and often highly realistic musical fragments. We also show that it can be employed as a discriminative model, returning promising results for phoneme recognition.},
+	journaltitle = {{arXiv}:1609.03499 [cs]},
+	author = {Oord, Aaron van den and Dieleman, Sander and Zen, Heiga and Simonyan, Karen and Vinyals, Oriol and Graves, Alex and Kalchbrenner, Nal and Senior, Andrew and Kavukcuoglu, Koray},
+	urldate = {2021-04-05},
+	date = {2016-09-19},
+	eprinttype = {arxiv},
+	eprint = {1609.03499},
+	keywords = {Computer Science - Machine Learning, Computer Science - Sound},
+	file = {arXiv Fulltext PDF:/home/alex/Zotero/storage/WFSA9USD/Oord et al. - 2016 - WaveNet A Generative Model for Raw Audio.pdf:application/pdf;arXiv.org Snapshot:/home/alex/Zotero/storage/9Q22ZW6B/1609.html:text/html},
+}
+
+@article{mehri_samplernn_2017,
+	title = {{SampleRNN}: An Unconditional End-to-End Neural Audio Generation Model},
+	url = {http://arxiv.org/abs/1612.07837},
+	shorttitle = {{SampleRNN}},
+	abstract = {In this paper we propose a novel model for unconditional audio generation based on generating one audio sample at a time. We show that our model, which profits from combining memory-less modules, namely autoregressive multilayer perceptrons, and stateful recurrent neural networks in a hierarchical structure is able to capture underlying sources of variations in the temporal sequences over very long time spans, on three datasets of different nature. Human evaluation on the generated samples indicate that our model is preferred over competing models. We also show how each component of the model contributes to the exhibited performance.},
+	journaltitle = {{arXiv}:1612.07837 [cs]},
+	author = {Mehri, Soroush and Kumar, Kundan and Gulrajani, Ishaan and Kumar, Rithesh and Jain, Shubham and Sotelo, Jose and Courville, Aaron and Bengio, Yoshua},
+	urldate = {2021-04-19},
+	date = {2017-02-11},
+	eprinttype = {arxiv},
+	eprint = {1612.07837},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Sound},
+	file = {arXiv Fulltext PDF:/home/alex/Zotero/storage/RVEWG634/Mehri et al. - 2017 - SampleRNN An Unconditional End-to-End Neural Audi.pdf:application/pdf},
+}
+
+@article{manzelli_conditioning_2018,
+  author    = {Rachel Manzelli and
+               Vijay Thakkar and
+               Ali Siahkamari and
+               Brian Kulis},
+  title     = {Conditioning Deep Generative Raw Audio Models for Structured Automatic
+               Music},
+  journal   = {CoRR},
+  volume    = {abs/1806.09905},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1806.09905},
+  archivePrefix = {arXiv},
+  eprint    = {1806.09905},
+  timestamp = {Mon, 13 Aug 2018 16:47:49 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1806-09905.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{roche_autoencoders_nodate,
   year     = {2019},
   title    = {Autoencoders for music sound modeling: a comparison of linear, shallow, deep, recurrent and variational models},
