save report updates

--- a/papers/progress/alex/progress-alex.bib
+++ b/papers/progress/alex/progress-alex.bib
@@ -52,6 +52,24 @@
 	file = {arXiv Fulltext PDF:/home/alex/Zotero/storage/RVEWG634/Mehri et al. - 2017 - SampleRNN An Unconditional End-to-End Neural Audi.pdf:application/pdf},
 }
 
+@misc{vasquez2019melnet,
+      title={MelNet: A Generative Model for Audio in the Frequency Domain}, 
+      author={Sean Vasquez and Mike Lewis},
+      year={2019},
+      eprint={1906.01083},
+      archivePrefix={arXiv},
+      primaryClass={eess.AS}
+}
+
+@misc{dhariwal2020jukebox,
+      title={Jukebox: A Generative Model for Music}, 
+      author={Prafulla Dhariwal and Heewoo Jun and Christine Payne and Jong Wook Kim and Alec Radford and Ilya Sutskever},
+      year={2020},
+      eprint={2005.00341},
+      archivePrefix={arXiv},
+      primaryClass={eess.AS}
+}
+
 @article{manzelli_conditioning_2018,
   author    = {Rachel Manzelli and
                Vijay Thakkar and
