add note-seq dependency for reading MIDI files into Python

--- a/papers/progress/alex/progress-alex.tex
+++ b/papers/progress/alex/progress-alex.tex
@@ -106,6 +106,8 @@ structure of different styles of music, then providing generations from this
 model as conditioning inputs to a WaveNet-based raw audio generator
 \cite{manzelli_conditioning_2018}.
 
+Prior work points out that the division between symbolic music notes and the sounds of music is analogous to the division between symbolic language and utterances in speech \cite{hawthorne2019enabling}.
+
 \section{Planned Methods}
 
 \section{Progress}
