--- a/papers/progress/alex/progress-alex.bib
+++ b/papers/progress/alex/progress-alex.bib
@@ -107,3 +107,11 @@
   primaryclass  = {cs.SD}
 }
 
+@misc{hawthorne2019enabling,
+      title={Enabling Factorized Piano Music Modeling and Generation with the MAESTRO Dataset}, 
+      author={Curtis Hawthorne and Andriy Stasyuk and Adam Roberts and Ian Simon and Cheng-Zhi Anna Huang and Sander Dieleman and Erich Elsen and Jesse Engel and Douglas Eck},
+      year={2019},
+      eprint={1810.12247},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
