add some midi deps and paper work

--- a/papers/progress/alex/progress-alex.bib
+++ b/papers/progress/alex/progress-alex.bib
@@ -23,69 +23,69 @@
 }
 
 @article{oord_wavenet_2016,
-	title = {{WaveNet}: A Generative Model for Raw Audio},
-	url = {http://arxiv.org/abs/1609.03499},
-	shorttitle = {{WaveNet}},
-	abstract = {This paper introduces {WaveNet}, a deep neural network for generating raw audio waveforms. The model is fully probabilistic and autoregressive, with the predictive distribution for each audio sample conditioned on all previous ones; nonetheless we show that it can be efficiently trained on data with tens of thousands of samples per second of audio. When applied to text-to-speech, it yields state-of-the-art performance, with human listeners rating it as significantly more natural sounding than the best parametric and concatenative systems for both English and Mandarin. A single {WaveNet} can capture the characteristics of many different speakers with equal fidelity, and can switch between them by conditioning on the speaker identity. When trained to model music, we find that it generates novel and often highly realistic musical fragments. We also show that it can be employed as a discriminative model, returning promising results for phoneme recognition.},
-	journaltitle = {{arXiv}:1609.03499 [cs]},
-	author = {Oord, Aaron van den and Dieleman, Sander and Zen, Heiga and Simonyan, Karen and Vinyals, Oriol and Graves, Alex and Kalchbrenner, Nal and Senior, Andrew and Kavukcuoglu, Koray},
-	urldate = {2021-04-05},
-	date = {2016-09-19},
-	eprinttype = {arxiv},
-	eprint = {1609.03499},
-	keywords = {Computer Science - Machine Learning, Computer Science - Sound},
-	file = {arXiv Fulltext PDF:/home/alex/Zotero/storage/WFSA9USD/Oord et al. - 2016 - WaveNet A Generative Model for Raw Audio.pdf:application/pdf;arXiv.org Snapshot:/home/alex/Zotero/storage/9Q22ZW6B/1609.html:text/html},
+  title        = {{WaveNet}: A Generative Model for Raw Audio},
+  url          = {http://arxiv.org/abs/1609.03499},
+  shorttitle   = {{WaveNet}},
+  abstract     = {This paper introduces {WaveNet}, a deep neural network for generating raw audio waveforms. The model is fully probabilistic and autoregressive, with the predictive distribution for each audio sample conditioned on all previous ones; nonetheless we show that it can be efficiently trained on data with tens of thousands of samples per second of audio. When applied to text-to-speech, it yields state-of-the-art performance, with human listeners rating it as significantly more natural sounding than the best parametric and concatenative systems for both English and Mandarin. A single {WaveNet} can capture the characteristics of many different speakers with equal fidelity, and can switch between them by conditioning on the speaker identity. When trained to model music, we find that it generates novel and often highly realistic musical fragments. We also show that it can be employed as a discriminative model, returning promising results for phoneme recognition.},
+  journaltitle = {{arXiv}:1609.03499 [cs]},
+  author       = {Oord, Aaron van den and Dieleman, Sander and Zen, Heiga and Simonyan, Karen and Vinyals, Oriol and Graves, Alex and Kalchbrenner, Nal and Senior, Andrew and Kavukcuoglu, Koray},
+  urldate      = {2021-04-05},
+  date         = {2016-09-19},
+  eprinttype   = {arxiv},
+  eprint       = {1609.03499},
+  keywords     = {Computer Science - Machine Learning, Computer Science - Sound},
+  file         = {arXiv Fulltext PDF:/home/alex/Zotero/storage/WFSA9USD/Oord et al. - 2016 - WaveNet A Generative Model for Raw Audio.pdf:application/pdf;arXiv.org Snapshot:/home/alex/Zotero/storage/9Q22ZW6B/1609.html:text/html}
 }
 
 @article{mehri_samplernn_2017,
-	title = {{SampleRNN}: An Unconditional End-to-End Neural Audio Generation Model},
-	url = {http://arxiv.org/abs/1612.07837},
-	shorttitle = {{SampleRNN}},
-	abstract = {In this paper we propose a novel model for unconditional audio generation based on generating one audio sample at a time. We show that our model, which profits from combining memory-less modules, namely autoregressive multilayer perceptrons, and stateful recurrent neural networks in a hierarchical structure is able to capture underlying sources of variations in the temporal sequences over very long time spans, on three datasets of different nature. Human evaluation on the generated samples indicate that our model is preferred over competing models. We also show how each component of the model contributes to the exhibited performance.},
-	journaltitle = {{arXiv}:1612.07837 [cs]},
-	author = {Mehri, Soroush and Kumar, Kundan and Gulrajani, Ishaan and Kumar, Rithesh and Jain, Shubham and Sotelo, Jose and Courville, Aaron and Bengio, Yoshua},
-	urldate = {2021-04-19},
-	date = {2017-02-11},
-	eprinttype = {arxiv},
-	eprint = {1612.07837},
-	keywords = {Computer Science - Artificial Intelligence, Computer Science - Sound},
-	file = {arXiv Fulltext PDF:/home/alex/Zotero/storage/RVEWG634/Mehri et al. - 2017 - SampleRNN An Unconditional End-to-End Neural Audi.pdf:application/pdf},
+  title        = {{SampleRNN}: An Unconditional End-to-End Neural Audio Generation Model},
+  url          = {http://arxiv.org/abs/1612.07837},
+  shorttitle   = {{SampleRNN}},
+  abstract     = {In this paper we propose a novel model for unconditional audio generation based on generating one audio sample at a time. We show that our model, which profits from combining memory-less modules, namely autoregressive multilayer perceptrons, and stateful recurrent neural networks in a hierarchical structure is able to capture underlying sources of variations in the temporal sequences over very long time spans, on three datasets of different nature. Human evaluation on the generated samples indicate that our model is preferred over competing models. We also show how each component of the model contributes to the exhibited performance.},
+  journaltitle = {{arXiv}:1612.07837 [cs]},
+  author       = {Mehri, Soroush and Kumar, Kundan and Gulrajani, Ishaan and Kumar, Rithesh and Jain, Shubham and Sotelo, Jose and Courville, Aaron and Bengio, Yoshua},
+  urldate      = {2021-04-19},
+  date         = {2017-02-11},
+  eprinttype   = {arxiv},
+  eprint       = {1612.07837},
+  keywords     = {Computer Science - Artificial Intelligence, Computer Science - Sound},
+  file         = {arXiv Fulltext PDF:/home/alex/Zotero/storage/RVEWG634/Mehri et al. - 2017 - SampleRNN An Unconditional End-to-End Neural Audi.pdf:application/pdf}
 }
 
 @misc{vasquez2019melnet,
-      title={MelNet: A Generative Model for Audio in the Frequency Domain}, 
-      author={Sean Vasquez and Mike Lewis},
-      year={2019},
-      eprint={1906.01083},
-      archivePrefix={arXiv},
-      primaryClass={eess.AS}
+  title         = {MelNet: A Generative Model for Audio in the Frequency Domain},
+  author        = {Sean Vasquez and Mike Lewis},
+  year          = {2019},
+  eprint        = {1906.01083},
+  archiveprefix = {arXiv},
+  primaryclass  = {eess.AS}
 }
 
 @misc{dhariwal2020jukebox,
-      title={Jukebox: A Generative Model for Music}, 
-      author={Prafulla Dhariwal and Heewoo Jun and Christine Payne and Jong Wook Kim and Alec Radford and Ilya Sutskever},
-      year={2020},
-      eprint={2005.00341},
-      archivePrefix={arXiv},
-      primaryClass={eess.AS}
+  title         = {Jukebox: A Generative Model for Music},
+  author        = {Prafulla Dhariwal and Heewoo Jun and Christine Payne and Jong Wook Kim and Alec Radford and Ilya Sutskever},
+  year          = {2020},
+  eprint        = {2005.00341},
+  archiveprefix = {arXiv},
+  primaryclass  = {eess.AS}
 }
 
 @article{manzelli_conditioning_2018,
-  author    = {Rachel Manzelli and
+  author        = {Rachel Manzelli and
                Vijay Thakkar and
                Ali Siahkamari and
                Brian Kulis},
-  title     = {Conditioning Deep Generative Raw Audio Models for Structured Automatic
+  title         = {Conditioning Deep Generative Raw Audio Models for Structured Automatic
                Music},
-  journal   = {CoRR},
-  volume    = {abs/1806.09905},
-  year      = {2018},
-  url       = {http://arxiv.org/abs/1806.09905},
-  archivePrefix = {arXiv},
-  eprint    = {1806.09905},
-  timestamp = {Mon, 13 Aug 2018 16:47:49 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-1806-09905.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  journal       = {CoRR},
+  volume        = {abs/1806.09905},
+  year          = {2018},
+  url           = {http://arxiv.org/abs/1806.09905},
+  archiveprefix = {arXiv},
+  eprint        = {1806.09905},
+  timestamp     = {Mon, 13 Aug 2018 16:47:49 +0200},
+  biburl        = {https://dblp.org/rec/journals/corr/abs-1806-09905.bib},
+  bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{roche_autoencoders_nodate,
@@ -108,10 +108,38 @@
 }
 
 @misc{hawthorne2019enabling,
-      title={Enabling Factorized Piano Music Modeling and Generation with the MAESTRO Dataset}, 
-      author={Curtis Hawthorne and Andriy Stasyuk and Adam Roberts and Ian Simon and Cheng-Zhi Anna Huang and Sander Dieleman and Erich Elsen and Jesse Engel and Douglas Eck},
-      year={2019},
-      eprint={1810.12247},
-      archivePrefix={arXiv},
-      primaryClass={cs.SD}
+  title         = {Enabling Factorized Piano Music Modeling and Generation with the MAESTRO Dataset},
+  author        = {Curtis Hawthorne and Andriy Stasyuk and Adam Roberts and Ian Simon and Cheng-Zhi Anna Huang and Sander Dieleman and Erich Elsen and Jesse Engel and Douglas Eck},
+  year          = {2019},
+  eprint        = {1810.12247},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.SD}
+}
+
+
+@article{yang_evaluation_2020,
+  title        = {On the evaluation of generative models in music},
+  volume       = {32},
+  issn         = {0941-0643, 1433-3058},
+  url          = {http://link.springer.com/10.1007/s00521-018-3849-7},
+  doi          = {10.1007/s00521-018-3849-7},
+  abstract     = {The modeling of artiﬁcial, human-level creativity is becoming more and more achievable. In recent years, neural networks have been successfully applied to diﬀerent tasks such as image and music generation, demonstrating their great potential in realizing computational creativity. The fuzzy deﬁnition of creativity combined with varying goals of the evaluated generative systems, however, make subjective evaluation seem to be the only viable methodology of choice. We review the evaluation of generative music systems and discuss the inherent challenges of their evaluation. Although subjective evaluation should always be the ultimate choice for the evaluation of creative results, researchers unfamiliar with rigorous subjective experiment design and without the necessary resources for the execution of a large-scale experiment face challenges in terms of reliability, validity, and replicability of the results. In numerous studies, this leads to the report of insigniﬁcant and possibly irrelevant results and the lack of comparability with similar and previous generative systems. Therefore, we propose a set of simple musically informed objective metrics enabling an objective and reproducible way of evaluating and comparing the output of music generative systems. We demonstrate the usefulness of the proposed metrics with several experiments on real-world data.},
+  pages        = {4773--4784},
+  number       = {9},
+  journaltitle = {Neural Computing and Applications},
+  shortjournal = {Neural Comput \& Applic},
+  author       = {Yang, Li-Chia and Lerch, Alexander},
+  urldate      = {2021-04-25},
+  date         = {2020-05},
+  langid       = {english},
+  file         = {Yang and Lerch - 2020 - On the evaluation of generative models in music.pdf:/home/alex/Zotero/storage/9WDAQXR3/Yang and Lerch - 2020 - On the evaluation of generative models in music.pdf:application/pdf}
+}
+
+@misc{dong2017musegan,
+  title         = {MuseGAN: Multi-track Sequential Generative Adversarial Networks for Symbolic Music Generation and Accompaniment},
+  author        = {Hao-Wen Dong and Wen-Yi Hsiao and Li-Chia Yang and Yi-Hsuan Yang},
+  year          = {2017},
+  eprint        = {1709.06298},
+  archiveprefix = {arXiv},
+  primaryclass  = {eess.AS}
 }
